--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
+[![Codecov test coverage](https://codecov.io/gh/bwilden/bper/branch/main/graph/badge.svg)](https://codecov.io/gh/bwilden/bper?branch=main)
 <!-- badges: end -->
 
 This package provides functions for predicting an individual's race/ethnicity given their first name, last name, geolocation, political party, age, gender, and address characteristics. The method is based on a Naive Bayes classification algorithm which incorporates known ethnorace distributions over the observed characteristics to generate posterior probabilities for each individual.
@@ -30,48 +31,3 @@ You can install the development version from with:
 devtools::install_github("bwilden/bper")
 ```
 
-## Usage
-
-### Step 1
-
-Start by loading the `bper` package and preparing your input data set containing individuals whose ethnorace you wish to predict. The following columns are supported:
-
--   `first_name`. All names should be uppercase.
--   `last_name`. Remove all punctuation and all spaces to increase chances of finding a match (e.g. "O'NEAL" or "O NEAL" should be "ONEAL") . All names should be uppercase.
--   `birth_year`. Currently only individuals born between the years 1911 and 2010 will match.
--   `female`. A 1/0 indicator for female or not-female.
--   `party`. Options are "DEM" for Democrat, "REP" for Republican, and "UNA" for Independents or other political parties.
--   `apartment`. A 1/0 indicator for whether the individual lives in multi-unit housing or not.
--   `state`. 2 character State abbreviation code.
--   `county`. 5 digit County, or FIPS, code. This is comprised of a 2-digit State code + 3-digit County code.
--   `place`. 7 digit Census Place code. This is comprised of a 2-digit State code + 5-digit Place code.
--   `zip`. 5 digit ZIP Code.
--   `block`. 15 digit complete US Census block code. This is comprised of a 2-digit State code + 3-digit County code + 6-digit Census Tract code + 4-digit Census Block code. Make sure this is a character string to preserve leading 0's in State codes.
-
-If any of the above columns are not present in your input data set, a column of NA's will be appended so that the `predict_ethnorace` function runs. Predictive performance may suffer, however, depending on which columns are missing. The most important columns are `first_name`, `last_name`, and one geolocation variable (`state`, `county`, `place`, `zip`, or `block`). Predictive accuracy improves following a decrease in average population size for your geolocation unit. So Census blocks are better than ZIP Codes, which are better than County codes, which are better than State codes.
-
-See example data frame below.
-
-```{r example}
-library(bper)
-
-example_persons
-```
-
-### Step 2
-
-The `predict_ethnorace` function works by merging nationwide ethnorace distribution data into the input data set to perform calculations. This data is stored externally and must be downloaded and then loaded into your global environment before running `predict_ethnorace`. Do this with:
-
-```{r}
-load_bperdata(download = TRUE, save_files = FALSE, include_blocks = TRUE)
-```
-
-Warning: the total size of these file is about 60 MB. If you are not using Census Blocks for your geolocation variable, set `include_blocks = FALSE` to substantially reduce the download time. For more details see `?load_bperdata` and <https://github.com/bwilden/bperdata.> Note: you do **not** need to install the `bperdata` package.
-
-### Step 3
-
-Now you are ready to run `predict_ethnorace`.
-
-```{r}
-predict_ethnorace(example_persons)
-```
